# go-taglib-wasm

./: taglib.go  taglib_test.go
embed/: .gitignore  CMakeLists.txt  build  embed.go  taglib.wasm  taglib_wasm.cpp
